# AntSimulator

./: .gitignore  CMakeLists.txt  README.md  conf_example.txt
cmake/: embed_dylibs.cmake
include/: utils.hpp
include/editor/GUI/: text_label.hpp
include/render/: colony_renderer.hpp
include/simulation/: config.hpp
